Fix spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ input {
   font-size: 10px;
   line-height: 15px;
   color: #444;
-  margin: 6px 0 2px;
+  margin: 0;
   display: block;
 }
 
